--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node --no-warnings=ExperimentalWarning --loader ts-node/esm src/index.ts"
   },
   "dependencies": {
-    "osm-pbf-parser-node": "^1.1.4"
+    "osm-pbf-parser-node": "^1.1.4",
+    "uniqolor": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
