--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "uniqolor": "^1.1.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@types/node": "^20.14.10",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.13.0"
   }
 }
